Bottom white space fix

--- a/src/CSS/App.css
+++ b/src/CSS/App.css
@@ -53,7 +53,7 @@ body{
 }
 html,body{
   width: 100vw;
-  height: 100vh;
+  height: calc(100 * var(--vh));
 }
 html,body,div,h1,h2,h3,h4,p{
   text-decoration: none;
